--- a/block-img.html
+++ b/block-img.html
@@ -18,14 +18,12 @@
 ">
     <div style="display: flex;flex-direction: column;align-content: center;justify-content: center;align-items: center;height: 100%;text-align: center;">
 <div>
-    抱歉，当前图片未能通过审查，可能含有不良内容，故无法进行加载。
+    Xin lỗi, hình ảnh hiện tại không vượt qua 5MB。
     <br>
     Sorry, the current image failed to pass the review and may contain undesirable content, so it cannot be loaded.
 </div>
 <br>
-<div>Powered By: <span><a style="
-    color: cornflowerblue;"
-    href="https://github.com/cf-pages/Telegraph-Image">Telegraph-Image</a></span></div>
+
 </div>
 
 
